--- a/CloneZortea/css/style.css
+++ b/CloneZortea/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap");
 /*RESET*/
 *, *:before, *:after {
@@ -393,9 +394,8 @@ header .container_large .menu-responsive {
   display: none;
 }
 header.capa_header {
-  background: url("../images/capaHeader.png");
+  background: url("../images/capaHeader.png") center;
   position: static;
-  height: 145px;
 }
 
 /* DESKTOP LARGE - 1400px*/
@@ -769,6 +769,175 @@ footer .container_small .informations .social a:hover p {
 /* TABLET BIG - 900px*/
 /* 
   ================================
+  OBRAS
+  ================================
+*/
+.obras {
+  padding-bottom: 60px;
+}
+.obras .container .display {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 75px 80px;
+}
+.obras .container .display .item {
+  width: 390px;
+  height: 400px;
+}
+.obras .container .display .item img {
+  border: solid 5px rgb(239, 235, 235);
+  width: 100%;
+  transition: all 0.3s;
+}
+.obras .container .display .item h3 {
+  font-weight: 600;
+  font-size: 1.25rem;
+  margin-top: 30px;
+  transition: all 0.3s;
+}
+.obras .container .display .item p {
+  margin-bottom: 0;
+  margin-top: 20px;
+  transition: all 0.3s;
+}
+.obras .container .display .item span {
+  font-size: 0.75rem;
+  transition: all 0.3s;
+}
+.obras .container .display .item:hover {
+  color: #d53a2f;
+}
+.obras .container .display .item:hover img {
+  border-color: #023859;
+}
+.obras .container .display .item:hover p {
+  color: #d53a2f;
+}
+
+/* LAPTOP - 1024px*/
+@media (max-width: 56.25rem) {
+  .obras .container .display {
+    gap: 30px;
+  }
+  .obras .container .display .item h3 {
+    font-size: 1.125rem;
+  }
+}
+/* 
+  ================================
+  SOLUÇÕES
+  ================================
+*/
+.solucoes {
+  /* content_1 */
+  /* display_solucoes */
+  /* content_2 */
+}
+.solucoes .content_1 .display {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 80px;
+}
+.solucoes .content_1 .display .txt {
+  width: 400px;
+}
+.solucoes .content_1 .display .txt p {
+  font-size: 1rem;
+  line-height: 30px;
+}
+.solucoes .content_1 .display .card {
+  width: 500px;
+  background-color: #fff;
+  box-shadow: 0 1px 90px rgba(0, 0, 0, 0.21);
+  padding: 40px 40px;
+  position: relative;
+}
+.solucoes .content_1 .display .card h2 {
+  font-size: 1.75rem;
+  color: #023859;
+  font-weight: 600;
+  margin-bottom: 10px;
+  text-align: center;
+}
+.solucoes .content_1 .display .card h2::after {
+  content: "";
+  width: 415px;
+  height: 1px;
+  position: absolute;
+  background-color: #d53a2f;
+  top: 85px;
+  left: 45px;
+}
+.solucoes .content_1 .display .card ul {
+  margin: 0 auto;
+  margin-top: 40px;
+}
+.solucoes .content_1 .display .card ul li {
+  margin: 10px;
+  font-size: 0.875rem;
+  line-height: 2.2;
+  padding-left: 25px;
+  position: relative;
+}
+.solucoes .content_1 .display .card ul li::before {
+  content: "";
+  width: 7px;
+  height: 7px;
+  position: absolute;
+  background-color: #023859;
+  top: 10px;
+  left: 8px;
+}
+.solucoes .display_solucoes {
+  padding: 30px 0;
+}
+.solucoes .display_solucoes .owl-carousel {
+  position: relative;
+}
+.solucoes .display_solucoes .owl-carousel img {
+  height: 205px;
+}
+.solucoes .display_solucoes .owl-carousel .owl-nav {
+  font-weight: bold;
+  font-size: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 1111;
+  height: 205px;
+  color: #023859;
+  transition: all 0.3s;
+}
+.solucoes .display_solucoes .owl-carousel .owl-nav .owl-prev, .solucoes .display_solucoes .owl-carousel .owl-nav .owl-next {
+  height: 100%;
+  width: 50px;
+  background-color: rgba(2, 2, 2, 0.31);
+}
+.solucoes .display_solucoes .owl-carousel .owl-nav :hover {
+  background-color: rgba(2, 2, 2, 0.5);
+  color: #fff;
+}
+.solucoes .display_solucoes .owl-carousel .owl-nav :hover span {
+  background-color: transparent;
+}
+.solucoes .content_2 .display {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.solucoes .content_2 .display .img-slider, .solucoes .content_2 .display .txt {
+  width: 550px;
+}
+
+/* 
+  ================================
   BUTTON
   ================================
 */
@@ -809,6 +978,20 @@ footer .container_small .informations .social a:hover p {
   top: 45%;
   left: 0;
   background-color: #1EB4E1;
+}
+
+/* LAPTOP - 1024px*/
+@media (max-width: 64rem) {
+  .header_title .container {
+    height: 120px;
+    justify-content: center;
+  }
+  .header_title .container h1 {
+    margin-left: 0;
+  }
+  .header_title .container h1::before {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
