--- a/CloneZortea/css/2-layouts/solucoes.scss
+++ b/CloneZortea/css/2-layouts/solucoes.scss
@@ -13,7 +13,7 @@
     & .content_1 {
         & .display {
             @include main.FlexBetCen;
-            gap: 80px;
+            gap: 20px 80px;
 
             & .txt {
                 width: 400px;
@@ -37,16 +37,7 @@
                     font-weight: 600;
                     margin-bottom: 10px;
                     text-align: center;
-
-                    &::after {
-                        content: "";
-                        width: 415px;
-                        height: 1px;
-                        position: absolute;
-                        background-color: #d53a2f;
-                        top: 85px;
-                        left: 45px;
-                    }
+                    border-bottom: #d53a2f 1px solid;
                 }
 
                 & ul {
@@ -75,6 +66,23 @@
         }
     }
 
+    /* DESKTOP - 1024px*/
+    @include main.breakpoint(smashLaptop) {
+
+        .content_1 {
+            & .display {
+                flex-wrap: wrap;
+
+                & .txt {
+                    width: 100%;
+                }
+
+                & .card {
+                    margin: 0 auto;
+                }
+            }
+        }
+    }
 
     /* display_solucoes */
     & .display_solucoes {
@@ -118,17 +126,129 @@
         }
     }
 
-    /* content_2 */
-    & .content_2 {
-        & .display {
-            @include main.FlexBetCen;
-            flex-wrap: wrap;
-
-            & .img-slider, & .txt {
-                width: 550px;
+    /* DESKTOP - 600px*/
+    @include main.breakpoint(smashTablet) {
+        .display_solucoes {
+            & .owl-carousel {
+                & .owl-nav {
+                    display: none;
+                }
             }
         }
     }
 
+    /* content_2 */
+    & .content_2 {
+        padding-bottom: 60px;
+
+        & .display {
+            display: flex;
+            gap: 20px 60px;
+            justify-content: center;
+            align-items: flex-start;
+            flex-wrap: wrap;
+
+            & .owl-two {
+                width: 550px;
+
+                & .owl-nav {
+                    font-weight: bold;
+                    font-size: 50px;
+                    @include main.FlexBetCen;
+                    position: absolute;
+                    top: 0;
+                    width: 100%;
+                    z-index: 1111;
+                    height: 96%;
+                    color: main.$ColorMain;
+                    transition: all 0.3s;
+
+                    & .owl-prev,
+                    & .owl-next {
+                        height: 97%;
+                        margin-top: -10px;
+                        width: 50px;
+                        background-color: rgb(2 2 2 / 31%);
+                    }
+
+                    & :hover {
+                        background-color: rgb(2 2 2 / 50%);
+                        color: #fff;
+
+                        & span {
+                            background-color: transparent;
+                        }
+                    }
+                }
+            }
+
+            & .txt {
+                width: 540px;
+            }
+        }
+
+        & h2 {
+            color: main.$ColorMain;
+            font-size: reset.toRem(30);
+            font-weight: 600;
+            margin-bottom: 30px;
+            line-height: 1.6;
+        }
+
+        & p {
+            font-size: reset.toRem(16);
+            font-weight: 400;
+            color: #222;
+            line-height: 2.2;
+        }
+    }
+
+    /* DESKTOP - 1024px*/
+    @include main.breakpoint(smashDesktop) {
+        .content_2 {
+            & .display {
+                flex-direction: column-reverse;
+
+                & .owl-two {
+                    margin: 0 auto;
+                }
+
+                & .txt {
+                    width: 100%;
+                }
+
+            }
+
+            & h2 {
+                text-align: center;
+                font-size: reset.toRem(28);
+            }
+        }
+    }
+
+    /* DESKTOP - 600px*/
+    @include main.breakpoint(smashTablet) {
+        .content_2 {
+            & .display {
+
+                & .owl-two {
+                    width: 100%;
+
+                    & .owl-nav {
+                        display: none;
+                    }
+                }
+            }
+
+            & h2 {
+                text-align: center;
+                font-size: reset.toRem(20);
+            }
+
+            & p {
+                text-align: center;
+            }
+        }
+    }
 
 }
