Clone Zortea - Created Page Clientes

--- a/CloneZortea/css/2-layouts/footer.scss
+++ b/CloneZortea/css/2-layouts/footer.scss
@@ -9,6 +9,8 @@
 
 footer {
     & .container_small {
+        padding-top: 35px;
+
         & .menu {
             border-top: solid 1px main.$ColorFour;
             border-bottom: solid 1px main.$ColorFour;
