Clone Zortea - Created Page Contato

--- a/CloneZortea/css/3-modules/_headerTitle.scss
+++ b/CloneZortea/css/3-modules/_headerTitle.scss
@@ -17,6 +17,7 @@
 
         & h1 {
             margin-left: 120px;
+            text-transform: uppercase;
 
             &::before {
                 content: "";
