--- a/Accordion/base.scss
+++ b/Accordion/base.scss
@@ -164,11 +164,15 @@ img {
 
 .container {
     width: 80%;
-    margin: 0 auto;
+    background-color: #fff;
+    border-radius: 10px;
 }
 
 body {
     background-color: #444;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 h1 {
@@ -207,6 +211,7 @@ h1 {
         width: 100%;
         height: auto;
         background-color: #FFF;
+        box-shadow: 5px 6px 20px rgb(210 210 210);
         margin: 0 auto 15px auto;
         border: none;
         border-radius: 5px;
