--- a/GalleryImage/css/layouts/_gallery_image03.scss
+++ b/GalleryImage/css/layouts/_gallery_image03.scss
@@ -57,4 +57,80 @@
             }
         }
     }
+
+    & .history_images {
+        visibility: collapse;
+        opacity: 0;
+        transition: all 0.5s;
+
+        margin: {
+            top: 30px;
+        }
+
+        &.active {
+            visibility: visible;
+            opacity: 1;
+        }
+
+        & h2 {
+            text-align: center;
+
+            font: {
+                size: 20px;
+            }
+        }
+
+        & .display {
+            display: flex;
+            justify-content: center;
+            max-height: 600px;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 15px;
+
+            margin: {
+                top: 20px;
+            }
+
+            & .image {
+                width: 200px;
+                position: relative;
+
+                & img {
+                    border-radius: 20px;
+                    border: solid 4px lavender;
+                    box-shadow: 0 0 20px rgb(186, 186, 203);
+                    cursor: pointer;
+
+                    &:hover {
+                        opacity: 0.9;
+                        transform: scale(1.5);
+                    }
+                }
+
+                &::after {
+                    content: "Click in image for download!";
+                    width: 100%;
+                    height: 60px;
+                    display: flex;
+                    text-align: center;
+                    align-items: center;
+                    background-color: #fff;
+                    border-radius: 20px;
+                    position: absolute;
+                    bottom: -20px;
+                    left: 0;
+                    opacity: 0;
+                    visibility: collapse;
+                }
+
+                &:hover {
+                    &::after {
+                        opacity: 1;
+                        visibility: visible;
+                    }
+                }
+            }
+        }
+    }
 }
