--- a/projectFull/assets/css/2-layouts/header.scss
+++ b/projectFull/assets/css/2-layouts/header.scss
@@ -6,3 +6,131 @@
   HEADER
   ================================
 */
+
+header {
+  height: 500px;
+  background: url('../images/elements/Rectangle.WebP');
+  z-index: -1;
+
+  & .leaves {
+    height: inherit;
+    position: absolute;
+    z-index: 0;
+
+    &.left {
+      width: 890px;
+      background: url('../images/elements/left-leaves.WebP') no-repeat left;
+      animation: leaves-left 2s;
+    }
+
+    @keyframes leaves-left {
+      from {
+        left: -890px;
+      }
+
+      to {
+        left: 0;
+      }
+    }
+
+    &.right {
+      width: 360px;
+      right: 0;
+      background: url('../images/elements/right-leaves.WebP') no-repeat;
+      animation: leaves-right 2s;
+    }
+
+    @keyframes leaves-right {
+      from {
+        right: -360px;
+      }
+
+      to {
+        right: 0;
+      }
+    }
+  }
+
+  & .plantperson {
+    width: 400px;
+    height: inherit;
+    background: url('../images/elements/plantperson.WebP') no-repeat;
+    position: absolute;
+    right: 20%;
+    top: 35px;
+    animation: plantperson 2s;
+  }
+
+  @keyframes plantperson {
+    0% {
+      opacity: 0;
+      transform: scale(0);
+    }
+
+    45% {
+      transform: scale(1.1);
+    }
+
+    100% {
+      transform: scale(1);
+    }
+  }
+
+  & .container_small {
+    position: relative;
+
+    & .title {
+      position: absolute;
+      top: 30px;
+      z-index: 1;
+
+      animation: {
+        name: header-title;
+        duration: 2s;
+      }
+
+      & h1 {
+        margin-top: 30px;
+        color: #fff;
+      }
+
+      & .arrow {
+        width: 40px;
+        height: 40px;
+        position: absolute;
+        bottom: -50px;
+        left: 0;
+        cursor: pointer;
+        background: url('../images/icons/arrow.png') no-repeat;
+
+      }
+
+      @keyframes header-title {
+        from {
+          opacity: 0.5;
+          transform: scale(0);
+
+          margin: {
+            top: -300px;
+            left: -500px;
+          }
+        }
+
+        to {
+          opacity: 1;
+        }
+      }
+
+      & h4 {
+        & a {
+          color: #fff;
+          transition: all 0.3s;
+
+          &:hover {
+            color: main.$ColorThree;
+          }
+        }
+      }
+    }
+  }
+}
